fixed layout of FilterBar in desktop when refresh icon visible

--- a/frontend/src/app/components/FilterBar/FilterBar.module.css
+++ b/frontend/src/app/components/FilterBar/FilterBar.module.css
@@ -96,6 +96,10 @@
     flex: 1;
   }
 
+  .filterBar__titleSection input {
+    max-width: 15rem;
+  }
+
   .filterBar__locationSection {
     flex: 1;
 
